force-app/main/default/objects/Work_Order__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the onboarded candidate.</description>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipName>Candidate_Project_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>