force-app/main/default/objects/Work_Order__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The expected or actual end date of the candidate on the project.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>