force-app/main/default/objects/Work_Order__c/fields/Parent_Work_OrderId__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It contains self lookup relationship.</description>
    <label>Parent Work OrderId</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>