force-app/main/default/objects/Work_Order__c/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the recruiter.</description>
    <label>Recruiter</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipName>Candidate_Project_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>