force-app/main/default/objects/Work_Order__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date the candidate joined or started on the project.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>