force-app/main/default/objects/Work_Order__c/validationRules/Status_not_change_after_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_not_change_after_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISPICKVAL(PRIORVALUE(Status__c), &quot;Completed&quot;),
    NOT(ISPICKVAL(Status__c, &quot;Completed&quot;))
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Once a Work Order is marked as Completed, its status cannot be changed.</errorMessage>
</ValidationRule>