force-app/main/default/objects/Work_Order__c/listViews/Work_Orders_List_View.listView-meta.xml
<ListView>
    <fullName>Work_Orders_List_View</fullName>
    <columns>NAME</columns>
    <columns>Renewed__c</columns>
    <columns>Candidate__c</columns>
    <columns>Status__c</columns>
    <columns>Project__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Work Orders List View</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>